data/derived/fa15/progs/unify/prog2790.ml.out
Characters 92-94:
  | Sine(e1)  -> sin(pi *. eval e1)
                                ^^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'a
